2008-12-16  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* index.php: language configuration updated.

2008-12-16  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.mo, include/languages/es.po: Updated Spanish
	  translation.

	* include/languages/index.pot: Updated po template.

2008-12-16  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* include/config_process.php: language configuration updated; fixes
	  bug #2431309

	* index.php: changed non standard tags.

2008-12-16  Esteban Sanchez  <estebans@artica.es>

	* godmode/updatemanager/load_updatemanager.php: Definetely fixed user
	and incident counts.

2008-12-16  Esteban Sanchez  <estebans@artica.es>

	* integria_dbdata.sql: updating_code_path is now blank.

	* godmode/updatemanager/main.php: Fixed style table when an update was
	found.
	
	* godmode/updatemanager/settings.php: Set updating code path to
	homedir if it's empty. Binary path is not used.

	* godmode/updatemanager/load_updatemanager.php: Fixed sql error when
	getting users and incidents.

2008-12-16  Esteban Sanchez  <estebans@artica.es>

	* godmode/updatemanager/lib/libupdate_manager_client.php: Disabled
	debug flag

2008-12-15  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.mo, include/languages/es.po: Updated Spanish
	  translation.

	* include/languages/index.pot: Updated po template.

	* operation/side_menu.php,
	  operation/user_report/report_full_graph.php: Modified strings to
	  improve i18n.

2008-12-15  Jorge Gonzalez  <jorgegonz@artica.es>

        * include/help/en/help_hours_perday.php,
          include/help/en/help_notification_period.php,
          include/help/en/help_limit_size.php,
          include/help/en/help_autowu_completion.php,
          include/help/en/help_no_wu_completion.php: Added and modified
          inline help files.

        * include/languages/es.mo, include/languages/es.po: Updated Spanish 
          translation.

        * include/languages/index.pot: Updated po template.
